--- a/vacatures_wg.html
+++ b/vacatures_wg.html
@@ -31,15 +31,17 @@
             <ul id="list">
                 <li>
                     <article class="vacature">
-                        <div class="sliderUnder">
-                            <section class="text">
-                                <h1>Verkoper</h1>
-                                <p>verloopt 30/06/15</p>
-                            </section>
-                            <a href="berichten.html" class="messages">
-                                <p>0</p>
-                            </a>
-                        </div>
+                        <a href="vacaturedetail.html" class="linkToDetail">
+                            <div class="sliderUnder">
+                                <section class="text">
+                                    <h1>Verkoper</h1>
+                                    <p>verloopt 30/06/15</p>
+                                </section>
+                                <a href="berichten.html" class="messages">
+                                    <p>0</p>
+                                </a>
+                            </div>
+                        </a>
                         <div class="sliderOnTop">
                             <ul class="iconList">
                                 <li class="edit"><img alt="edit icon" src="img/Edit.png"></li>
@@ -50,6 +52,7 @@
                 </li>
                 <li>
                     <article class="vacature">
+                        <a href="vacaturedetail.html" class="linkToDetail">
                         <div class="sliderUnder">
                             <section class="text">
                                 <h1>Kassabediende gezocht om kassa's te bedienen en mensen dingen te verkopen en er geld voor te vragen om dat dan in de kassa te plaatsen.</h1>
@@ -59,6 +62,7 @@
                                 <p>7</p>
                             </a>
                         </div>
+                        </a>
                         <div class="sliderOnTop">
                             <ul class="iconList">
                                 <li class="edit"><img alt="edit icon" src="img/Edit.png"></li>
@@ -69,6 +73,7 @@
                 </li>
                 <li>
                     <article class="vacature">
+                        <a href="vacaturedetail.html" class="linkToDetail">
                         <div class="sliderUnder">
                             <section class="text">
                                 <h1>Sales Associate</h1>
@@ -78,6 +83,7 @@
                                 <p>0</p>
                             </a>
                         </div>
+                        </a>
                         <div class="sliderOnTop">
                             <ul class="iconList">
                                 <li class="edit"><img alt="edit icon" src="img/Edit.png"></li>
@@ -88,6 +94,7 @@
                 </li>
                 <li>
                     <article class="vacature">
+                        <a href="vacaturedetail.html" class="linkToDetail">
                         <div class="sliderUnder">
                             <section class="text">
                                 <h1>Afwasser</h1>
@@ -97,6 +104,7 @@
                                 <p>12</p>
                             </a>
                         </div>
+                        </a>
                         <div class="sliderOnTop">
                             <ul class="iconList">
                                 <li class="edit"><img alt="edit icon" src="img/Edit.png"></li>
@@ -113,6 +121,7 @@
             <ul id="list">
                 <li>
                     <article class="vacature">
+                        <a href="vacaturedetail.html" class="linkToDetail">
                         <div class="sliderUnder">
                             <section class="text">
                                 <h1>Winkelbediende</h1>
@@ -122,6 +131,7 @@
                                 <p>1</p>
                             </a>
                         </div>
+                        </a>
                         <div class="sliderOnTop">
                             <ul class="iconList">
                                 <li class="edit"><img alt="edit icon" src="img/Edit.png"></li>
@@ -132,6 +142,7 @@
                 </li>
                 <li>
                     <article class="vacature">
+                        <a href="vacaturedetail.html" class="linkToDetail">
                         <div class="sliderUnder">
                             <section class="text">
                                 <h1>PR Manager</h1>
@@ -141,6 +152,7 @@
                                 <p>4</p>
                             </a>
                         </div>
+                        </a>
                         <div class="sliderOnTop">
                             <ul class="iconList">
                                 <li class="edit"><img alt="edit icon" src="img/Edit.png"></li>
@@ -151,6 +163,7 @@
                 </li>
                 <li>
                     <article class="vacature">
+                        <a href="vacaturedetail.html" class="linkToDetail">
                         <div class="sliderUnder">
                             <section class="text">
                                 <h1>Second Assistant Manager</h1>
@@ -160,6 +173,7 @@
                                 <p>0</p>
                             </a>
                         </div>
+                        </a>
                         <div class="sliderOnTop">
                             <ul class="iconList">
                                 <li class="edit"><img alt="edit icon" src="img/Edit.png"></li>
