--- a/login.html
+++ b/login.html
@@ -8,16 +8,15 @@
     <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
     <link href="css/algemene.css" rel="stylesheet">
     <link href="css/login.css" rel="stylesheet">
-    <script src="js/login.js"></script>
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
-    <img class="logo" src="img/LogoSteven.png" alt="Logo SosJobs">
+    <img class="logo" src="img/LOGO2.png" alt="Logo SosJobs">
 
     <form>
-        <input class="empty" type="text" name="login" placeholder="E-mail">
-        <input class="empty" type="password" name="wachtwoord" placeholder="Wachtwoord">
+        <input type="text" name="login" placeholder="E-mail">
+        <input class="error" type="password" name="wachtwoord" placeholder="Wachtwoord">
     </form>
 
 
@@ -25,8 +24,7 @@
     <a class="accountLink" href="#">Wachtwoord vergeten?</a>
     <a class="accountLink" href="registreren.html">Nog geen account? Registreer hier!</a>
 
-    <a class="login" href="vacatures_wg.html">LoginWG</a>
-    <a class="login" href="vacaturesWN.html">LoginWN</a>
+    <a class="login" href="#">Login</a>
     <a class="facebookLogin" href="#">
     <img src="img/Facebook-128%20wit.png" alt="icon facebook"  class="fbIcoon">Log in met Facebook</a>
 
