--- a/chatbox.html
+++ b/chatbox.html
@@ -61,7 +61,9 @@
 
 
         <div class="sturen">
-            <div>Bericht...</div>
+            <form>
+        <input class="empty" type="text" name="login" placeholder="Bericht...">
+    </form>
             <p>Stuur</p>
         </div>
 
