--- a/favorieten.html
+++ b/favorieten.html
@@ -26,32 +26,32 @@
     <section class="content">
         <nav class="tab">
             <ul>
-                <li class="active jobs"><p>Jobs</p></li><li class="stages"><p>Bedrijven</p></li>
+                <li class="active jobs"><p>Jobs</p></li><li class="stages"><p>Stages</p></li>
             </ul>
         </nav>
         <div class="jobvacatures">
             <div class="vacature">
                 <img class="ster" src="img/ster.png" alt="star">
-                <h3>Verkoper (m/v), Gent</h3> 
-                <p>Voor een juwelen- en accessoirewinkel zoeken we een jobstudent. Je staat in voor het helpen van klanten en het bedienen van de kassa.</p> 
+                <h3>Sales Associate</h3> 
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium cumque expedita et eligendi facilis dolor molestiae, velit nisi iure. Corporis unde ad consequuntur cupiditate nobis, aliquam quos eveniet dolor ut.</p> 
                 <p class="datum">Verloopt 29/05/2015</p>
             </div>
             <div class="vacature">
                 <img class="ster" src="img/ster.png" alt="star">
-                <h3>Orderpicker (m/v), Mechelen</h3> 
-                <p>Voor een bedrijf in Mechelen zoeken we studenten die een bijverdienste zoeken tijdens het jaar in de week. (Dit is geen weekendwerk). Werkuren zijn gelegen tussen maandag en vrijdag tussen 17u en ...</p> 
+                <h3>Sales Associate</h3> 
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium cumque expedita et eligendi facilis dolor molestiae, velit nisi iure. Corporis unde ad consequuntur cupiditate nobis, aliquam quos eveniet dolor ut.</p> 
                 <p class="datum">Verloopt 29/05/2015</p>
             </div>
             <div class="vacature">
                 <img class="ster" src="img/ster.png" alt="star">
-                <h3>Verkoper (m/v), Mechelen</h3> 
-                <p>Voor een snoepwinkel in Mechelen zoeken we een student die beschikbaar is op maandag. Je staat in voor het openen van de winkel. Aanvullen van de goederen en de verkoop en het afrekenen. Snoep de ...</p> 
+                <h3>Sales Associate</h3> 
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium cumque expedita et eligendi facilis dolor molestiae, velit nisi iure. Corporis unde ad consequuntur cupiditate nobis, aliquam quos eveniet dolor ut.</p> 
                 <p class="datum">Verloopt 29/05/2015</p>
             </div>
             <div class="vacature">
                 <img class="ster" src="img/ster.png" alt="star">
-                <h3>Verkoper (m/v), Kortrijk</h3> 
-                <p>Voor een multimediazaak in Kortrijk zijn we op zoek naar twee studenten: 1 voor Telecom en 1 voor IT-afdeling. Je bent beschikbaar van 27/05 tem 31/05. Er wordt ook een zekere voorkennis/ervaring ...</p> 
+                <h3>Sales Associate</h3> 
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium cumque expedita et eligendi facilis dolor molestiae, velit nisi iure. Corporis unde ad consequuntur cupiditate nobis, aliquam quos eveniet dolor ut.</p> 
                 <p class="datum">Verloopt 29/05/2015</p>
             </div>  
         </div>
@@ -59,31 +59,27 @@
 
             <div class="vacature">
                 <img class="ster" src="img/ster.png" alt="star">
-                <h3>Colruyt Vilvoorde</h3> 
-                
+                <h3>Sales Associate</h3> 
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium cumque expedita et eligendi facilis dolor molestiae, velit nisi iure. Corporis unde ad consequuntur cupiditate nobis, aliquam quos eveniet dolor ut.</p> 
+                <p class="datum">Verloopt 29/05/2015</p>
             </div>
             <div class="vacature">
                 <img class="ster" src="img/ster.png" alt="star">
-                <h3>Makro Diegem</h3> 
+                <h3>Sales Associate</h3> 
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium cumque expedita et eligendi facilis dolor molestiae, velit nisi iure. Corporis unde ad consequuntur cupiditate nobis, aliquam quos eveniet dolor ut.</p> 
+                <p class="datum">Verloopt 29/05/2015</p>
             </div>  
             <div class="vacature">
                 <img class="ster" src="img/ster.png" alt="star">
-                <h3>3fonteinen</h3> 
+                <h3>Sales Associate</h3> 
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium cumque expedita et eligendi facilis dolor molestiae, velit nisi iure. Corporis unde ad consequuntur cupiditate nobis, aliquam quos eveniet dolor ut.</p> 
+                <p class="datum">Verloopt 29/05/2015</p>
             </div>
             <div class="vacature">
                 <img class="ster" src="img/ster.png" alt="star">
-                <h3>Videohouse</h3> 
-            </div>  <div class="vacature">
-                <img class="ster" src="img/ster.png" alt="star">
-                <h3>KBC</h3> 
-            </div> 
-             <div class="vacature">
-                <img class="ster" src="img/ster.png" alt="star">
-                <h3>Delhaize</h3> 
-            </div> 
-             <div class="vacature">
-                <img class="ster" src="img/ster.png" alt="star">
-                <h3>Nescafé</h3> 
+                <h3>Sales Associate</h3> 
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium cumque expedita et eligendi facilis dolor molestiae, velit nisi iure. Corporis unde ad consequuntur cupiditate nobis, aliquam quos eveniet dolor ut.</p> 
+                <p class="datum">Verloopt 29/05/2015</p>
             </div> 
         </div>
     </section>
