--- a/registreren.html
+++ b/registreren.html
@@ -14,7 +14,7 @@
 </head>
     
 <body>
-    <img src="img/LogoSteven.png" alt="Logo SosJobs">
+    <img src="img/LOGO2.png" alt="Logo SosJobs">
     <div class="midden">
     <p id="student">Student</p>
     <!--https://proto.io/freebies/onoff/-->
