--- a/vacatures_wg.html
+++ b/vacatures_wg.html
@@ -31,7 +31,6 @@
             <ul id="list">
                 <li>
                     <article class="vacature">
-<<<<<<< HEAD
                         <div class="sliderUnder">
                             <section class="text">
                                 <h1>Verkoper</h1>
@@ -41,20 +40,6 @@
                                 <p>0</p>
                             </a>
                         </div>
-=======
-                        <a href="vacaturedetail.html" class="linkToDetail">
-                            <div class="sliderUnder">
-                                <section class="text">
-                                    <h1>Verkoper</h1>
-                                    <p class="beschrijving">Voor een bedrijf in Mechelen zoeken we studenten die een bijverdienste zoeken tijdens het jaar in de week. (Dit is geen weekendwerk). Werkuren zijn gelegen tussen maandag en vrijdag tussen 17u en ...</p>
-                                    <p class="datum">verloopt 30/06/15</p>
-                                </section>
-                                <a href="berichten.html" class="messages">
-                                    <p>0</p>
-                                </a>
-                            </div>
-                        </a>
->>>>>>> origin/master
                         <div class="sliderOnTop">
                             <ul class="iconList">
                                 <li class="edit"><img alt="edit icon" src="img/Edit.png"></li>
@@ -68,8 +53,7 @@
                         <div class="sliderUnder">
                             <section class="text">
                                 <h1>Kassabediende gezocht om kassa's te bedienen en mensen dingen te verkopen en er geld voor te vragen om dat dan in de kassa te plaatsen.</h1>
-                                <p class="beschrijving">Voor een bedrijf in Mechelen zoeken we studenten die een bijverdienste zoeken tijdens het jaar in de week. (Dit is geen weekendwerk). Werkuren zijn gelegen tussen maandag en vrijdag tussen 17u en ...</p>
-                                    <p class="datum">verloopt 30/06/15</p>
+                                <p>verloopt 02/06/15</p>
                             </section>
                             <a href="berichten.html" class="messages">
                                 <p>7</p>
@@ -88,8 +72,7 @@
                         <div class="sliderUnder">
                             <section class="text">
                                 <h1>Sales Associate</h1>
-                                <p class="beschrijving">Voor een bedrijf in Mechelen zoeken we studenten die een bijverdienste zoeken tijdens het jaar in de week. (Dit is geen weekendwerk). Werkuren zijn gelegen tussen maandag en vrijdag tussen 17u en ...</p>
-                                    <p class="datum">verloopt 30/06/15</p>
+                                <p>verloopt 06/06/15</p>
                             </section>
                             <a href="berichten.html" class="messages">
                                 <p>0</p>
@@ -108,8 +91,7 @@
                         <div class="sliderUnder">
                             <section class="text">
                                 <h1>Afwasser</h1>
-                                <p class="beschrijving">Voor een bedrijf in Mechelen zoeken we studenten die een bijverdienste zoeken tijdens het jaar in de week. (Dit is geen weekendwerk). Werkuren zijn gelegen tussen maandag en vrijdag tussen 17u en ...</p>
-                                    <p class="datum">verloopt 30/06/15</p>
+                                <p>verloopt 24/06/15</p>
                             </section>
                             <a href="berichten.html" class="messages">
                                 <p>12</p>
@@ -134,8 +116,7 @@
                         <div class="sliderUnder">
                             <section class="text">
                                 <h1>Winkelbediende</h1>
-                                <p class="beschrijving">Voor een bedrijf in Mechelen zoeken we studenten die een bijverdienste zoeken tijdens het jaar in de week. (Dit is geen weekendwerk). Werkuren zijn gelegen tussen maandag en vrijdag tussen 17u en ...</p>
-                                    <p class="datum">verloopt 30/06/15</p>
+                                <p>verlopen 18/05/15</p>
                             </section>
                             <a href="berichten.html" class="messages">
                                 <p>1</p>
@@ -154,8 +135,7 @@
                         <div class="sliderUnder">
                             <section class="text">
                                 <h1>PR Manager</h1>
-                                <p class="beschrijving">Voor een bedrijf in Mechelen zoeken we studenten die een bijverdienste zoeken tijdens het jaar in de week. (Dit is geen weekendwerk). Werkuren zijn gelegen tussen maandag en vrijdag tussen 17u en ...</p>
-                                    <p class="datum">verloopt 30/06/15</p>
+                                <p>verlopen 04/05/15</p>
                             </section>
                             <a href="berichten.html" class="messages">
                                 <p>4</p>
@@ -174,8 +154,7 @@
                         <div class="sliderUnder">
                             <section class="text">
                                 <h1>Second Assistant Manager</h1>
-                                <p class="beschrijving">Voor een bedrijf in Mechelen zoeken we studenten die een bijverdienste zoeken tijdens het jaar in de week. (Dit is geen weekendwerk). Werkuren zijn gelegen tussen maandag en vrijdag tussen 17u en ...</p>
-                                    <p class="datum">verloopt 30/06/15</p>
+                                <p>verloopt 24/06/15</p>
                             </section>
                             <a href="berichten.html" class="messages">
                                 <p>0</p>
