--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <img class="logo" src="img/LogoSteven.png" alt="Logo SosJobs">
+    <img class="logo" src="img/LOGO2.png" alt="Logo SosJobs">
 
     <form>
         <input class="empty" type="text" name="login" placeholder="E-mail">
