beschrijving vacatures + commentaar weg in css
Links ook toegevoegd

--- a/vacatures_wg.html
+++ b/vacatures_wg.html
@@ -31,15 +31,18 @@
             <ul id="list">
                 <li>
                     <article class="vacature">
-                        <div class="sliderUnder">
-                            <section class="text">
-                                <h1>Verkoper</h1>
-                                <p>verloopt 30/06/15</p>
-                            </section>
-                            <a href="berichten.html" class="messages">
-                                <p>0</p>
-                            </a>
-                        </div>
+                        <a href="vacaturedetail.html" class="linkToDetail">
+                            <div class="sliderUnder">
+                                <section class="text">
+                                    <h1>Verkoper</h1>
+                                    <p class="beschrijving">Voor een bedrijf in Mechelen zoeken we studenten die een bijverdienste zoeken tijdens het jaar in de week. (Dit is geen weekendwerk). Werkuren zijn gelegen tussen maandag en vrijdag tussen 17u en ...</p>
+                                    <p class="datum">verloopt 30/06/15</p>
+                                </section>
+                                <a href="berichten.html" class="messages">
+                                    <p>0</p>
+                                </a>
+                            </div>
+                        </a>
                         <div class="sliderOnTop">
                             <ul class="iconList">
                                 <li class="edit"><img alt="edit icon" src="img/Edit.png"></li>
@@ -50,15 +53,18 @@
                 </li>
                 <li>
                     <article class="vacature">
+                        <a href="vacaturedetail.html" class="linkToDetail">
                         <div class="sliderUnder">
                             <section class="text">
                                 <h1>Kassabediende gezocht om kassa's te bedienen en mensen dingen te verkopen en er geld voor te vragen om dat dan in de kassa te plaatsen.</h1>
-                                <p>verloopt 02/06/15</p>
+                                <p class="beschrijving">Voor een bedrijf in Mechelen zoeken we studenten die een bijverdienste zoeken tijdens het jaar in de week. (Dit is geen weekendwerk). Werkuren zijn gelegen tussen maandag en vrijdag tussen 17u en ...</p>
+                                    <p class="datum">verloopt 30/06/15</p>
                             </section>
                             <a href="berichten.html" class="messages">
                                 <p>7</p>
                             </a>
                         </div>
+                        </a>
                         <div class="sliderOnTop">
                             <ul class="iconList">
                                 <li class="edit"><img alt="edit icon" src="img/Edit.png"></li>
@@ -69,15 +75,18 @@
                 </li>
                 <li>
                     <article class="vacature">
+                        <a href="vacaturedetail.html" class="linkToDetail">
                         <div class="sliderUnder">
                             <section class="text">
                                 <h1>Sales Associate</h1>
-                                <p>verloopt 06/06/15</p>
+                                <p class="beschrijving">Voor een bedrijf in Mechelen zoeken we studenten die een bijverdienste zoeken tijdens het jaar in de week. (Dit is geen weekendwerk). Werkuren zijn gelegen tussen maandag en vrijdag tussen 17u en ...</p>
+                                    <p class="datum">verloopt 30/06/15</p>
                             </section>
                             <a href="berichten.html" class="messages">
                                 <p>0</p>
                             </a>
                         </div>
+                        </a>
                         <div class="sliderOnTop">
                             <ul class="iconList">
                                 <li class="edit"><img alt="edit icon" src="img/Edit.png"></li>
@@ -88,15 +97,18 @@
                 </li>
                 <li>
                     <article class="vacature">
+                        <a href="vacaturedetail.html" class="linkToDetail">
                         <div class="sliderUnder">
                             <section class="text">
                                 <h1>Afwasser</h1>
-                                <p>verloopt 24/06/15</p>
+                                <p class="beschrijving">Voor een bedrijf in Mechelen zoeken we studenten die een bijverdienste zoeken tijdens het jaar in de week. (Dit is geen weekendwerk). Werkuren zijn gelegen tussen maandag en vrijdag tussen 17u en ...</p>
+                                    <p class="datum">verloopt 30/06/15</p>
                             </section>
                             <a href="berichten.html" class="messages">
                                 <p>12</p>
                             </a>
                         </div>
+                        </a>
                         <div class="sliderOnTop">
                             <ul class="iconList">
                                 <li class="edit"><img alt="edit icon" src="img/Edit.png"></li>
@@ -113,15 +125,18 @@
             <ul id="list">
                 <li>
                     <article class="vacature">
+                        <a href="vacaturedetail.html" class="linkToDetail">
                         <div class="sliderUnder">
                             <section class="text">
                                 <h1>Winkelbediende</h1>
-                                <p>verlopen 18/05/15</p>
+                                <p class="beschrijving">Voor een bedrijf in Mechelen zoeken we studenten die een bijverdienste zoeken tijdens het jaar in de week. (Dit is geen weekendwerk). Werkuren zijn gelegen tussen maandag en vrijdag tussen 17u en ...</p>
+                                    <p class="datum">verloopt 30/06/15</p>
                             </section>
                             <a href="berichten.html" class="messages">
                                 <p>1</p>
                             </a>
                         </div>
+                        </a>
                         <div class="sliderOnTop">
                             <ul class="iconList">
                                 <li class="edit"><img alt="edit icon" src="img/Edit.png"></li>
@@ -132,15 +147,18 @@
                 </li>
                 <li>
                     <article class="vacature">
+                        <a href="vacaturedetail.html" class="linkToDetail">
                         <div class="sliderUnder">
                             <section class="text">
                                 <h1>PR Manager</h1>
-                                <p>verlopen 04/05/15</p>
+                                <p class="beschrijving">Voor een bedrijf in Mechelen zoeken we studenten die een bijverdienste zoeken tijdens het jaar in de week. (Dit is geen weekendwerk). Werkuren zijn gelegen tussen maandag en vrijdag tussen 17u en ...</p>
+                                    <p class="datum">verloopt 30/06/15</p>
                             </section>
                             <a href="berichten.html" class="messages">
                                 <p>4</p>
                             </a>
                         </div>
+                        </a>
                         <div class="sliderOnTop">
                             <ul class="iconList">
                                 <li class="edit"><img alt="edit icon" src="img/Edit.png"></li>
@@ -151,15 +169,18 @@
                 </li>
                 <li>
                     <article class="vacature">
+                        <a href="vacaturedetail.html" class="linkToDetail">
                         <div class="sliderUnder">
                             <section class="text">
                                 <h1>Second Assistant Manager</h1>
-                                <p>verloopt 24/06/15</p>
+                                <p class="beschrijving">Voor een bedrijf in Mechelen zoeken we studenten die een bijverdienste zoeken tijdens het jaar in de week. (Dit is geen weekendwerk). Werkuren zijn gelegen tussen maandag en vrijdag tussen 17u en ...</p>
+                                    <p class="datum">verloopt 30/06/15</p>
                             </section>
                             <a href="berichten.html" class="messages">
                                 <p>0</p>
                             </a>
                         </div>
+                        </a>
                         <div class="sliderOnTop">
                             <ul class="iconList">
                                 <li class="edit"><img alt="edit icon" src="img/Edit.png"></li>
