--- a/vacatures_wg.html
+++ b/vacatures_wg.html
@@ -195,7 +195,7 @@
     <nav id="hoofdNav">
         <ul>
         <a href=""><li class="main"><p class="icon-vac"></p></li></a>
-        <a href="berichtenWG.html"><li><p class="icon-berichten"></p></li></a>
+        <a href="BerichtenWG.html"><li><p class="icon-berichten"></p></li></a>
         <a href="groepen.html"><li><p class="icon-groepen"></p></li></a>
         <a href="instellingenWG.html"><li><p class="icon-nav"></p></li></a>
         </ul>
