--- a/vacatures_wg.html
+++ b/vacatures_wg.html
@@ -38,7 +38,7 @@
                                     <p class="beschrijving">Voor een bedrijf in Mechelen zoeken we studenten die een bijverdienste zoeken tijdens het jaar in de week. (Dit is geen weekendwerk). Werkuren zijn gelegen tussen maandag en vrijdag tussen 17u en ...</p>
                                     <p class="datum">verloopt 30/06/15</p>
                                 </section>
-                                <a href="berichten.html" class="messages">
+                                <a href="berichtenWG.html" class="messages">
                                     <p>0</p>
                                 </a>
                             </div>
@@ -60,7 +60,7 @@
                                 <p class="beschrijving">Voor een bedrijf in Mechelen zoeken we studenten die een bijverdienste zoeken tijdens het jaar in de week. (Dit is geen weekendwerk). Werkuren zijn gelegen tussen maandag en vrijdag tussen 17u en ...</p>
                                     <p class="datum">verloopt 30/06/15</p>
                             </section>
-                            <a href="berichten.html" class="messages">
+                            <a href="berichtenWG.html" class="messages">
                                 <p>7</p>
                             </a>
                         </div>
@@ -82,7 +82,7 @@
                                 <p class="beschrijving">Voor een bedrijf in Mechelen zoeken we studenten die een bijverdienste zoeken tijdens het jaar in de week. (Dit is geen weekendwerk). Werkuren zijn gelegen tussen maandag en vrijdag tussen 17u en ...</p>
                                     <p class="datum">verloopt 30/06/15</p>
                             </section>
-                            <a href="berichten.html" class="messages">
+                            <a href="berichtenWG.html" class="messages">
                                 <p>0</p>
                             </a>
                         </div>
@@ -104,7 +104,7 @@
                                 <p class="beschrijving">Voor een bedrijf in Mechelen zoeken we studenten die een bijverdienste zoeken tijdens het jaar in de week. (Dit is geen weekendwerk). Werkuren zijn gelegen tussen maandag en vrijdag tussen 17u en ...</p>
                                     <p class="datum">verloopt 30/06/15</p>
                             </section>
-                            <a href="berichten.html" class="messages">
+                            <a href="berichtenWG.html" class="messages">
                                 <p>12</p>
                             </a>
                         </div>
@@ -132,7 +132,7 @@
                                 <p class="beschrijving">Voor een bedrijf in Mechelen zoeken we studenten die een bijverdienste zoeken tijdens het jaar in de week. (Dit is geen weekendwerk). Werkuren zijn gelegen tussen maandag en vrijdag tussen 17u en ...</p>
                                     <p class="datum">verloopt 30/06/15</p>
                             </section>
-                            <a href="berichten.html" class="messages">
+                            <a href="berichtenWG.html" class="messages">
                                 <p>1</p>
                             </a>
                         </div>
@@ -154,7 +154,7 @@
                                 <p class="beschrijving">Voor een bedrijf in Mechelen zoeken we studenten die een bijverdienste zoeken tijdens het jaar in de week. (Dit is geen weekendwerk). Werkuren zijn gelegen tussen maandag en vrijdag tussen 17u en ...</p>
                                     <p class="datum">verloopt 30/06/15</p>
                             </section>
-                            <a href="berichten.html" class="messages">
+                            <a href="berichtenWG.html" class="messages">
                                 <p>4</p>
                             </a>
                         </div>
@@ -176,7 +176,7 @@
                                 <p class="beschrijving">Voor een bedrijf in Mechelen zoeken we studenten die een bijverdienste zoeken tijdens het jaar in de week. (Dit is geen weekendwerk). Werkuren zijn gelegen tussen maandag en vrijdag tussen 17u en ...</p>
                                     <p class="datum">verloopt 30/06/15</p>
                             </section>
-                            <a href="berichten.html" class="messages">
+                            <a href="berichtenWG.html" class="messages">
                                 <p>0</p>
                             </a>
                         </div>
@@ -195,7 +195,7 @@
     <nav id="hoofdNav">
         <ul>
         <a href=""><li class="main"><p class="icon-vac"></p></li></a>
-        <a href="BerichtenWG.html"><li><p class="icon-berichten"></p></li></a>
+        <a href="berichtenWG.html"><li><p class="icon-berichten"></p></li></a>
         <a href="groepen.html"><li><p class="icon-groepen"></p></li></a>
         <a href="instellingenWG.html"><li><p class="icon-nav"></p></li></a>
         </ul>
