--- a/instellingen.html
+++ b/instellingen.html
@@ -38,7 +38,7 @@
         </div>
         <div class="profile">
             <img src="img/Lock-128.png" alt="Privacy Instellingen">
-            <p>Privacy Instellingen</p>
+            <a href="privacy.html"><p>Privacy Instellingen</p></a>
         </div>
         <div class="profile">
             <img src="img/Facebook-128.png" alt="facebook">
