--- a/BerichtenWG.html
+++ b/BerichtenWG.html
@@ -26,9 +26,9 @@
 <body>
     <div class="klik"></div>
     <div class="wrapper">
-        <header><img src="img/Edit.png" class="editKnop">
+        <header><img src="img/Edit.png" class="editKnop" alt="edit">
             <h1>Berichten</h1>
-            <div class="optieKnop"><img src="img/Bolletjes.png">
+            <div class="optieKnop"><img src="img/Bolletjes.png" alt="opties">
             </div>
 
             <div class="orden">
@@ -129,26 +129,10 @@
 
         <nav id="hoofdNav">
             <ul>
-                <a href="vacatures_wg.html">
-                    <li>
-                        <p class="icon-vac"></p>
-                    </li>
-                </a>
-                <a>
-                    <li class="main">
-                        <p class="icon-berichten"></p>
-                    </li>
-                </a>
-                <a href="groepen.html">
-                    <li>
-                        <p class="icon-groepen"></p>
-                    </li>
-                </a>
-                <a href="instellingenWG.html">
-                    <li>
-                        <p class="icon-nav"></p>
-                    </li>
-                </a>
+               <li> <a href="vacatures_wg.html"><p class="icon-vac"></p></a></li>
+                <li class="main"><a><p class="icon-berichten"></p></a></li>
+                <li><a href="groepen.html"><p class="icon-groepen"></p></a></li>
+                <li><a href="instellingenWG.html"><p class="icon-nav"></p></a></li>
             </ul>
         </nav>
     </div>
