--- a/favorieten.html
+++ b/favorieten.html
@@ -18,12 +18,11 @@
 
 <body>
     <div class="klik"></div>
-    <div class="wrapper">
         <header>
             <h1>Favorieten</h1>
         </header>
     <div class="wrapper">
-    <section class="content">
+    <div class="content">
         <nav class="tab">
             <ul>
                 <li class="active jobs"><p>Jobs</p></li><li class="stages"><p>Stages</p></li>
@@ -82,32 +81,14 @@
                 <p class="datum">Verloopt 29/05/2015</p>
             </div> 
         </div>
-    </section>
-
-
+    </div>
 
         <nav id="hoofdNav">
             <ul>
-                <a href="vacaturesWN.html">
-                    <li>
-                        <p class="icon-zoeken"></p>
-                    </li>
-                </a>
-                <a href="berichten.html">
-                    <li>
-                        <p class="icon-berichten"></p>
-                    </li>
-                </a>
-                <a href="#">
-                    <li class="main">
-                        <p class="icon-fav"></p>
-                    </li>
-                </a>
-                <a href="instellingen.html">
-                    <li>
-                        <p class="icon-nav"></p>
-                    </li>
-                </a>
+                <li><a href="vacaturesWN.html"><p class="icon-zoeken"></p></a></li>
+                <li><a href="berichten.html"><p class="icon-berichten"></p></a></li>
+                <li class="main"><a href="#"><p class="icon-fav"></p></a></li>
+                <li><a href="instellingen.html"><p class="icon-nav"></p></a></li>
             </ul>
         </nav>
     </div>
