--- a/instellingen.html
+++ b/instellingen.html
@@ -81,10 +81,10 @@
         
     <nav id="hoofdNav">
         <ul>
-        <a href="vacaturesWN.html"><li><p class="icon-zoeken"></p></li></a>
-        <a href="berichten.html"><li><p class="icon-berichten"></p></li></a>
-        <a href="favorieten.html"><li><p class="icon-fav"></p></li></a>
-        <a href="#"><li class="main"><p class="icon-nav"></p></li></a>
+        <li><a href="vacaturesWN.html"><p class="icon-zoeken"></p></a></li>
+        <li><a href="berichten.html"><p class="icon-berichten"></p></a></li>
+        <li><a href="favorieten.html"><p class="icon-fav"></p></a></li>
+        <li class="main"><a href="#"><p class="icon-nav"></p></a></li>
         </ul>
     </nav>
     </div>
