--- a/instellingenWG.html
+++ b/instellingenWG.html
@@ -38,7 +38,7 @@
         </div>
         <div class="profile">
             <img src="img/Lock-128.png" alt="Privacy Instellingen">
-            <p>Privacy Instellingen</p>
+            <a href="privacy.html"><p>Privacy Instellingen</p></a>
         </div>
         <div class="profile">
             <img src="img/Facebook-128.png" alt="facebook">
@@ -81,10 +81,10 @@
         
     <nav id="hoofdNav">
         <ul>
-        <a href="vacatures_wg.html"><li><p class="icon-zoeken"></p></li></a>
-        <a href="berichtenWG.html"><li><p class="icon-berichten"></p></li></a>
-        <a href="groepen.html"><li><p class="icon-fav"></p></li></a>
-        <a href="#"><li class="main"><p class="icon-nav"></p></li></a>
+        <li><a href="vacatures_wg.html"><p class="icon-vac"></p></a></li>
+        <li><a href="berichtenWG.html"><p class="icon-berichten"></p></a></li>
+        <li><a href="groepen.html"><p class="icon-groepen"></p></a></li>
+        <li class="main"><a href="#"><p class="icon-nav"></p></a></li>
         </ul>
     </nav>
     </div>
