--- a/vacaturesWN.html
+++ b/vacaturesWN.html
@@ -18,7 +18,7 @@
     <header>
         <div class="klik"></div>
         <h1>Vacatures</h1>
-        <div class="optieKnop"><img src="img/Bolletjes.png"></div>
+        <div class="optieKnop"><img src="img/Bolletjes.png" alt="opties"></div>
         <div class="orden">
            <ul>
                <li>Datum</li>
@@ -29,7 +29,7 @@
         </div>
     </header>
     <div class="wrapper">
-    <section class="content">
+    <div class="content">
         <nav class="tab">
             <ul>
                 <li class="active jobs"><p>Jobs</p></li><li class="stages"><p>Stages</p></li>
@@ -91,14 +91,14 @@
                 <p class="datum">Verloopt 29/05/2015</p>
             </div> 
         </div>
-    </section>
+    </div>
     
     <nav id="hoofdNav">
         <ul>
-            <a href="#"><li class="main"><p class="icon-zoeken"></p></li></a>
-            <a href="berichten.html"><li><p class="icon-berichten"></p></li></a>
-            <a href="favorieten.html"><li><p class="icon-fav"></p></li></a>
-            <a href="instellingen.html"><li><p class="icon-nav"></p></li></a>
+            <li class="main"><a href="#"><p class="icon-zoeken"></p></a></li>
+            <li><a href="berichten.html"><p class="icon-berichten"></p></a></li>
+            <li><a href="favorieten.html"><p class="icon-fav"></p></a></li>
+            <li><a href="instellingen.html"><p class="icon-nav"></p></a></li>
         </ul>
     </nav>
     </div>
