--- a/berichten.html
+++ b/berichten.html
@@ -25,7 +25,7 @@
 <body>
    <div class="klik"></div>
    <div class="wrapper">
-   <header><img src="img/Edit.png" class="editKnop"><h1>Berichten</h1><div class="optieKnop"><img src="img/Bolletjes.png"></div>
+   <header><img src="img/Edit.png" class="editKnop" alt="edit"><h1>Berichten</h1><div class="optieKnop"><img src="img/Bolletjes.png" alt="opties"></div>
        
        <div class="orden">
            <ul><li>datum</li>
@@ -153,10 +153,10 @@
        
     <nav id="hoofdNav">
         <ul>
-        <a href="vacaturesWN.html"><li><p class="icon-zoeken"></p></li></a>
-        <a href="#"><li class="main"><p class="icon-berichten"></p></li></a>
-        <a href="favorieten.html"><li><p class="icon-fav"></p></li></a>
-        <a href="instellingen.html"><li><p class="icon-nav"></p></li></a>
+        <li><a href="vacaturesWN.html"><p class="icon-zoeken"></p></a></li>
+        <li class="main"><a href="#"><p class="icon-berichten"></p></a></li>
+        <li><a href="favorieten.html"><p class="icon-fav"></p></a></li>
+        <li><a href="instellingen.html"><p class="icon-nav"></p></a></li>
         </ul>
     </nav>
     </div>
