--- a/vacatures_wg.html
+++ b/vacatures_wg.html
@@ -23,7 +23,7 @@
    
     <header>
         <h1>Vacatures</h1>
-        <a href="vacatureAanmaken.html"><div class="plusKnop"><img src="img/plus.png"></div></a>
+        <a href="vacatureAanmaken.html"><div class="plusKnop"><img src="img/plus.png" alt="add"></div></a>
     </header>
     <div class="vacatures">
         <section id="lopende">
@@ -34,7 +34,7 @@
                         <a href="vacaturedetail.html" class="linkToDetail">
                             <div class="sliderUnder">
                                 <section class="text">
-                                    <h1>Verkoper</h1>
+                                    <h2>Verkoper</h2>
                                     <p class="beschrijving">Voor een bedrijf in Mechelen zoeken we studenten die een bijverdienste zoeken tijdens het jaar in de week. (Dit is geen weekendwerk). Werkuren zijn gelegen tussen maandag en vrijdag tussen 17u en ...</p>
                                     <p class="datum">verloopt 30/06/15</p>
                                 </section>
@@ -56,7 +56,7 @@
                         <a href="vacaturedetail.html" class="linkToDetail">
                         <div class="sliderUnder">
                             <section class="text">
-                                <h1>Kassabediende gezocht om kassa's te bedienen en mensen dingen te verkopen en er geld voor te vragen om dat dan in de kassa te plaatsen.</h1>
+                                <h2>Kassabediende gezocht om kassa's te bedienen en mensen dingen te verkopen en er geld voor te vragen om dat dan in de kassa te plaatsen.</h2>
                                 <p class="beschrijving">Voor een bedrijf in Mechelen zoeken we studenten die een bijverdienste zoeken tijdens het jaar in de week. (Dit is geen weekendwerk). Werkuren zijn gelegen tussen maandag en vrijdag tussen 17u en ...</p>
                                     <p class="datum">verloopt 30/06/15</p>
                             </section>
@@ -78,7 +78,7 @@
                         <a href="vacaturedetail.html" class="linkToDetail">
                         <div class="sliderUnder">
                             <section class="text">
-                                <h1>Sales Associate</h1>
+                                <h2>Sales Associate</h2>
                                 <p class="beschrijving">Voor een bedrijf in Mechelen zoeken we studenten die een bijverdienste zoeken tijdens het jaar in de week. (Dit is geen weekendwerk). Werkuren zijn gelegen tussen maandag en vrijdag tussen 17u en ...</p>
                                     <p class="datum">verloopt 30/06/15</p>
                             </section>
@@ -100,7 +100,7 @@
                         <a href="vacaturedetail.html" class="linkToDetail">
                         <div class="sliderUnder">
                             <section class="text">
-                                <h1>Afwasser</h1>
+                                <h2>Afwasser</h2>
                                 <p class="beschrijving">Voor een bedrijf in Mechelen zoeken we studenten die een bijverdienste zoeken tijdens het jaar in de week. (Dit is geen weekendwerk). Werkuren zijn gelegen tussen maandag en vrijdag tussen 17u en ...</p>
                                     <p class="datum">verloopt 30/06/15</p>
                             </section>
@@ -128,7 +128,7 @@
                         <a href="vacaturedetail.html" class="linkToDetail">
                         <div class="sliderUnder">
                             <section class="text">
-                                <h1>Winkelbediende</h1>
+                                <h2>Winkelbediende</h2>
                                 <p class="beschrijving">Voor een bedrijf in Mechelen zoeken we studenten die een bijverdienste zoeken tijdens het jaar in de week. (Dit is geen weekendwerk). Werkuren zijn gelegen tussen maandag en vrijdag tussen 17u en ...</p>
                                     <p class="datum">verloopt 30/06/15</p>
                             </section>
@@ -150,7 +150,7 @@
                         <a href="vacaturedetail.html" class="linkToDetail">
                         <div class="sliderUnder">
                             <section class="text">
-                                <h1>PR Manager</h1>
+                                <h2>PR Manager</h2>
                                 <p class="beschrijving">Voor een bedrijf in Mechelen zoeken we studenten die een bijverdienste zoeken tijdens het jaar in de week. (Dit is geen weekendwerk). Werkuren zijn gelegen tussen maandag en vrijdag tussen 17u en ...</p>
                                     <p class="datum">verloopt 30/06/15</p>
                             </section>
@@ -172,7 +172,7 @@
                         <a href="vacaturedetail.html" class="linkToDetail">
                         <div class="sliderUnder">
                             <section class="text">
-                                <h1>Second Assistant Manager</h1>
+                                <h2>Second Assistant Manager</h2>
                                 <p class="beschrijving">Voor een bedrijf in Mechelen zoeken we studenten die een bijverdienste zoeken tijdens het jaar in de week. (Dit is geen weekendwerk). Werkuren zijn gelegen tussen maandag en vrijdag tussen 17u en ...</p>
                                     <p class="datum">verloopt 30/06/15</p>
                             </section>
@@ -194,10 +194,10 @@
         
     <nav id="hoofdNav">
         <ul>
-        <a href=""><li class="main"><p class="icon-vac"></p></li></a>
-        <a href="berichtenWG.html"><li><p class="icon-berichten"></p></li></a>
-        <a href="groepen.html"><li><p class="icon-groepen"></p></li></a>
-        <a href="instellingenWG.html"><li><p class="icon-nav"></p></li></a>
+        <li class="main"><a href=""><p class="icon-vac"></p></a></li>
+        <li><a href="berichtenWG.html"><p class="icon-berichten"></p></a></li>
+        <li><a href="groepen.html"><p class="icon-groepen"></p></a></li>
+        <li><a href="instellingenWG.html"><p class="icon-nav"></p></a></li>
         </ul>
     </nav>
     </div>
